--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
             <title>Interactive Self Organizing Maps for Data Exploration</title>
 		      
-        <script src="//d3js.org/d3.v5.min.js"></script>
-        <script src="//d3js.org/d3-hexbin.v0.2.min.js"></script>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
         <script type="text/javascript" src="external/d3-tip.js"></script>
 
 		<style type="text/css">
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="lhm_hexmap.v0.js"></script>
 
         <div id="controls" style = margin-bottom:35px>
-            <input type="file" id="uploader">
+            <input type="file" id="uploader" multiple="multiple" >
             <script>
                 lhm_uploadButton("uploader",lhm_loadDataset);
             </script>
